EmployeePortal/k8s/backendDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ep
  name: backend-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: yugal47/employeeportalbackend:latest
        ports:
        - containerPort: 5000
