EmployeePortal/k8s/frontendDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ep
  name: frontend-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: yugal47/employeeportalfrontend:latest
        ports:
        - containerPort: 80
