EmployeePortal/k8s/backendService.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ep
  name: backend-service
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
