EmployeePortal/k8s/frontendService.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ep
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
