EmployeePortal/k8s/postgresService.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ep
  name: postgres
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
