EmployeePortal/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ep
  name: postgres
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432

---


apiVersion: v1
kind: Service
metadata:
  namespace: ep
  name: backend-service
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000

---


apiVersion: v1
kind: Service
metadata:
  namespace: ep
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
