EmployeePortal/k8s/ems-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ems-ingress
  namespace: ep
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ems.local
    http:
      paths:

      # FRONTEND (React SPA)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80

      # BACKEND APIs
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000
